--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,12 @@ p {
 	border-radius: 5px;
 	align-content: center;
 }
+
+.cat {
+	display: block;
+	margin: auto;
+	border-radius: 5px;
+	border: 2px solid black;
+	padding: 10px;
+	min-width: 200px;
+}
