--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,19 @@ p {
 	display: block;
 	margin: auto;
 	border-radius: 5px;
-	border: 2px solid black;
+	border: 5px solid;
+	border-color: #EA638C;
+	padding: 10px;
+	min-width: 200px;
+	margin-bottom: 20px;
+}
+
+.pancakes {
+	display: block;
+	margin: auto;
+	border-radius: 5px;
+	border: 5px solid;
+	border-color: #EA638C;
 	padding: 10px;
 	min-width: 200px;
 }
